--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Intent-App</string>
     <string name="hello_world">Hello World</string>
     <string name="go_to_second_screen">Go to second screen</string>
+    <string name="type_lesson_name">Type lesson name</string>
 </resources>
