--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_world">Hello World</string>
     <string name="go_to_second_screen">Go to second screen</string>
     <string name="type_lesson_name">Type lesson name</string>
+    <string name="close">Close</string>
 </resources>
